ncc/testsuite/negative/void-parm4.n
interface I {}

class Bug855 {
  public Foo[T](_x : T) : void where T : void { //E: `void ' is not a valid constraint. A type used as a constraint must be an interface, a non-sealed class or a type parameter
  }
  public Bar[T](_x : T) : void where T : void, I { //E: `void ' is not a valid constraint. A type used as a constraint must be an interface, a non-sealed class or a type parameter
  }
}

_ = 1;
